More alignment fixes. Centered passcode text. It's almost done, all that's left is the bug with the input field only working on Episode I's tab.

--- a/students/mandigrant/tabs/style.css
+++ b/students/mandigrant/tabs/style.css
@@ -73,6 +73,16 @@ ul li {
 	display:none;
 }
 
+.plot { 
+	height:100px;
+	display:block;
+}
+
+.passcodeText {
+	text-align:center;
+}
+
 .ending {
+	height:250px;
 	display:none;
 }
